[tool.poetry]
name = "rss-parsers"
version = "0.1.0"
description = ""
authors = ["Vladimir Puzakov <puzakov@tochka.com>"]

[tool.poetry.dependencies]
python = "^3.9"

# http client to call web api
httpx = "^0.21.3"
yarl = "^1.7.2"

# validators / converters
pydantic = "^1.9.0"
feedparser = "^6.0.8"
arrow = "^1.2.1"

# logging
structlog = "^21.5.0"
SQLAlchemy = "^1.4.29"
tenacity = "^8.0.1"
pytz = "^2021.3"
backoff = "^2.1.2"

[tool.poetry.dev-dependencies]
# linters
mypy = "^0.931"
wemake-python-styleguide = "^0.16.0"

# for colorful logging
rich = "^11.0.0"
colorama = "^0.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
